--- a/src/pages/QRCodeGenerator.scss
+++ b/src/pages/QRCodeGenerator.scss
@@ -1,11 +1,11 @@
-.qrgeneratot-wrapper {
+.qrgenerator-wrapper {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
  
   button {
-    background-color: #a4ffaf;
+    background-color: rgb(22, 179, 100);;
     padding: 10px;
     color: #24232c;
     cursor: pointer;
@@ -13,19 +13,19 @@
     border-radius: 4px;
   }
   .refresh-icon {
-    color: #a4ffaf;
+    color: rgb(22, 179, 100);;
     cursor: pointer;
     margin-left: 5px;
   }
   .download-icon {
-    color: #a4ffaf;
+    color: rgb(22, 179, 100);;
     cursor: pointer;
     font-size: 35px;
     margin-top: 10px;
   }
 
   h1 {
-    color: #a4ffaf;
+    color: rgb(22, 179, 100);;
   }
 
   form {
